<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Before -->
    <string name="welcome">Welcome!</string>

    <!-- Menu -->
    <string name="new_project">New debate</string>
    <string name="past_project">Past debates</string>
    <string name="settings">Settings</string>
    <string name="about_this_app">About</string>
    
    <!-- New project -->
    <string name="project_name">Debate name</string>
    <string name="duration_of_debate">Duration of the debate</string>
    <string name="number_of_speaker">Number of speaker</string>
    <string name="go">Go</string>
    <string name="speaker">Speaker</string>
    <string name="time_spoken">Time spoken</string>
    <string name="remaining_time">Remaining time</string>
    <string name="add_speaker">Add a speaker</string>
    <string name="list_speaker">List of speakers</string>
    <string name="terminate">Finish the debate</string>
    <string name="confirm_delete">Are you sure you want to delete?</string>
    <string name="save">Save the debate ?</string>
    <string name="save_question">Do you want to save this debate ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="pleasefinish">Please finish the debate before exit!</string>
    
    <!-- Historique -->
    <string name="details">Details</string>
    <string name="graph">Graphic</string>
    <string name="howtodelete">To delete a debate, drag it to the edge of the screen.</string>
    
    <!-- Settings -->
    <string name="sound_end_debate">Sound to play at the end of the debate</string>
    <string name="sound_end_speaker">Sound to play at the end of speaking time</string>
    <string name="sound_close_end">Sound to play when the time is soon over.</string>
    <string name="sound_percent">Time remaining before launch this sound (in %).</string>
    <string name="vibrator">Use the vibrator</string>
    <string name="edit">Edit</string>
    <string name="selectbip">Select a sound</string>
    
    <!-- Pro Version -->
    <string name="limited">Free version is limited to 3 speakers.</string>
    <string name="paidversion">Paid version only</string>
    <string name="minutesversion">The free version is limited to 30 minutes</string>
    <string name="passpro">Get the pro version</string>
    <string name="prohistorique">Using the pro version, you will be able to keep a history of your discussions.</string>
    
</resources>