<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- The main content view -->

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </FrameLayout>
        <!-- The navigation drawer -->

        <LinearLayout
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#3B0B24"
            android:dividerHeight="0dp"
            android:orientation="vertical" >

            <com.liltof.library.tools.PushScale
                android:id="@+id/buttonNewProject"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_corners" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/new_project" />
            </com.liltof.library.tools.PushScale>

            <com.liltof.library.tools.PushScale
                android:id="@+id/buttonPastProjects"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_corners" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/past_project" />
            </com.liltof.library.tools.PushScale>

            <com.liltof.library.tools.PushScale
                android:id="@+id/buttonSettings"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_corners" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/settings" />
            </com.liltof.library.tools.PushScale>

            <com.liltof.library.tools.PushScale
                android:id="@+id/buttonAbout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_corners" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/about_this_app" />
            </com.liltof.library.tools.PushScale>
        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>

</RelativeLayout>